--- a/main.css
+++ b/main.css
@@ -148,7 +148,7 @@ img {
   border-radius: 2px;
 }
 
-input {
+.register input {
   width: 135px;
   height: 25px;
   border-radius: 2px;
@@ -210,11 +210,26 @@ input {
   height: 13px;
 }
 
+.facebook {
+  background: url('images/sprite@2x.png') no-repeat -270px 0;
+  background-size: 400px 200px;
+  width: 35px;
+  height: 35px;
+}
 
+.pin {
+  background: url('images/sprite@2x.png') no-repeat -270px -40px;
+  background-size: 400px 200px;
+  width: 35px;
+  height: 35px;
+}
 
-
-
-
+.twitter {
+  background: url('images/sprite@2x.png') no-repeat -270px -80px;
+  background-size: 400px 200px;
+  width: 35px;
+  height: 35px;
+}
 
 /*DIV Tie Picture*/
 
@@ -253,13 +268,17 @@ li.ties-full-text {
 
 /*Three Image DIV*/
 
+.three {
+  padding-bottom: 90px;
+}
+
 .three-images-bow, .three-images-pocket, .three-images-tie {
   display: inline-block;
   padding-right: 20px;
 }
 
 .three-images-bow img, .three-images-pocket img, .three-images-tie img{
-  border: 1px solid #EEEEEE;
+  border: 1px solid #EDECED;
   width: 380px;
 }
 
@@ -276,10 +295,10 @@ li.ties-full-text {
 }
 .three-images-pocket p {
   text-align: right;
-  left: 768px;
+  left: 750px;
 }
 .three-images-tie p {
-  left: 1188px;
+  left: 1155px;
 }
 
 .seperate-text {
@@ -291,6 +310,7 @@ li.ties-full-text {
   font-size: 38px;
   font-weight: 100;
   margin-bottom: 30px;
+  line-height: 54px;
 
 }
 
@@ -307,3 +327,84 @@ li.ties-full-text {
   margin-top: 60px; 
 }
 
+/*Four Columns*/ 
+
+.four-columns {
+    font-size: 15px;
+    font-weight: inherit;
+    text-align: center;
+    display: inline-flex;
+    margin-left: 90px;
+    margin-top: 32px;
+}
+
+.column-one, .column-two, .column-three, .column-four {
+  display: inline-block;
+  text-align: left;
+  padding-right: 45px;
+}
+
+.column-one, .column-two, .column-three, .column-four {
+  width: 265px;
+
+}
+
+.column-one-a a, .column-four-p a {
+  text-decoration: none;
+  font-weight: inherit;
+  color: #029DFF;
+  line-height: 22px;
+}
+
+.four-columns img {
+  border: 1px solid #EDECED;
+  margin-top: -7px;
+  margin-bottom: 4px;
+}
+
+.column-two p, .column-three p {
+  margin-top: -7px;
+}
+
+
+.four-columns h3 {
+  font-size: 20px;
+}
+
+/*Column Two*/
+
+.facebook, .pin, .twitter {
+  display: inline-block;
+  padding-right: 8px;
+
+}
+
+/*Column Three*/
+.column-three-input input {
+    width: 195px;
+    height: 33px;
+    border-radius: 2px;
+    border: 1px solid #DCDCDC;
+    padding-left: 10px;
+    box-shadow: 0px 0px 0px 4px #f4f4f4;
+    font-size: 15px;
+    font-weight: 100;
+    margin-top: 9px;
+}
+
+.column-three-button button {
+    width: 110px;
+    height: 30px;
+    background-color: #33A1FF;
+    font-weight: 400;
+    border-radius: 4px;
+    border: none;
+    color: white;
+    font-size: 12px;
+    margin-top: 14px;
+}
+
+/*Column Four*/
+.top-text {
+  margin-top: 0;
+}
